--- a/klein2012structured_RIA/scirl_ria.tex
+++ b/klein2012structured_RIA/scirl_ria.tex
@@ -126,63 +126,29 @@ Cette paramétrisation de la récompense implique une paramétrisation similaire
 \end{equation}
 Conséquemment, la fonction de qualité partage son vecteur de paramètres avec la fonction de récompense, mais en relation avec un vecteur d'attributs $\mu^\pi$ appelé l'attribut moyen. Cette notion est de prime importance à notre contribution. Chaque composante $\mu_i^\pi$ de ce vecteur d'attributs est en réalité une fonction de qualité de la politique $\pi$ où la récompense serait $\phi_i$: $\mu_i^\pi(s,a) = Q^\pi_{\phi_i}(s,a)$. De fait, tout algorithme d'estimation de la fonction de qualité peut être utilisé pour estimer l'attribut moyen, comme une estimation de Monte-Carlo ou un algorithme aux différences temporelles~\cite{Klein:2011}.
 
-\subsection{Classification with Linearly Parameterized Score
-Functions} \label{subsec:background:classif}
+\subsection{Classifieurs à fonction de score paramétrée linéairement} \label{subsec:background:classif}
 
-Let $\X$ be a compact or a finite set (of inputs to be classified)
-and let $\Y$ be a finite set (of labels). Assume that inputs $x\in
-\X$  are drawn according to some unknown distribution $\prob(x)$ and
-that there exists some oracle which associates to each of these
-inputs a label $y\in Y$ drawn according to the unknown conditional
-distribution $\prob(y|x)$. Generally speaking, the goal of
-multi-class classification is, given a training set
-$\{(x_i,y_i)_{1\leq i \leq N}\}$ drawn according to $\prob(x,y)$, to
-produce a decision rule $g\in\Y^\X$ which aims at minimizing the
-classification error $\E[\chi_{\{g(x)\neq y\}}] = \prob(g(x)\neq
-y)$, where $\chi$ denotes the indicator function.
+Soit $\X$ un ensemble fini ou compact (d'entrées à classifier)
+ et soit $\Y$ un ensemble fini de (de labels). Supposons que les entrées $x\in
+\X$ sont tirées selon une distribution inconnue $\prob(x)$ et qu'il existe un oracle qui à chacune de ces entrées associe un label $y\in Y$ tiré selon une distribution de probabilité conditionnelle inconnue $\prob(y|x)$. De manière générale, la classification multi-classe cherche étant donné un set d'entraînement $\{(x_i,y_i)_{1\leq i \leq N}\}$ tiré selon $\prob(x,y)$, une règle de décision $g\in\Y^\X$ minimisant l'erreur de classification $\E[\chi_{\{g(x)\neq y\}}] = \prob(g(x)\neq y)$, où $\chi$ est la fonction indicatrice.
 
-Here, we consider a more restrictive set of classification
-algorithms. We assume that the decision rule associates to an input
-the argument which maximizes a related score function, this score
-function being linearly parameterized et the associated parameters
-being learnt by the algorithm. More formally, let $\psi(s,a) =
+Nous nous préoccupons ici d'un ensemble plus réduit de classifieurs. Nous supposons que la règle de décision associe à l'entrée l'argument qui maximise une certaine fonction de score, celle-ci est paramétrée linéairement, les paramètres étant appris par le classifieur. Formellement, soit $\psi(s,a) =
 (\psi_1(x,y)  \dots  \psi_d(x,y))^\top\in \mathbb{R}^d$
 %\begin{pmatrix}   \psi_1(x,y) & \dots & \psi_d(x,y)
 %\end{pmatrix}^\top \in \mathbb{R}^d$
-be a feature vector whose components are $d$ basis functions
-$\psi_i\in\mathbb{R}^{\X\times\Y}$. The linearly parameterized score
-function $s_w\in\mathbb{R}^{\X\times \Y}$ of parameter vector
-$w\in\mathbb{R}^d$ is defined as $s_w(x,y) = w^\top \psi(x,y)$. The
-associated decision rule $g_w\in{\Y^\X}$ is defined as $g_w(x) \in
-\argmax_{y\in\Y}s_w(x,y)$. Using a training set $\{(x_i,y_i)_{1\leq
-i\leq N}\}$, a linearly parameterized score function-based
-multi-class classification (MC$^2$ for short) algorithm computes a
-parameter vector $\theta_c$. The quality of the solution is
-quantified by the classification error $\epsilon_c =
+un vecteur d'attributs dont les composantes sont $d$ fonctions de base $\psi_i\in\mathbb{R}^{\X\times\Y}$. La fonction de score linéairement paramétrée $s_w\in\mathbb{R}^{\X\times \Y}$ de vecteur de paramètres $w\in\mathbb{R}^d$ est définie par $s_w(x,y) = w^\top \psi(x,y)$. La règle de décision associée $g_w\in{\Y^\X}$ est définie par $g_w(x) \in \argmax_{y\in\Y}s_w(x,y)$. En se basant sur un set d'entraînement $\{(x_i,y_i)_{1\leq
+i\leq N}\}$, un classifieur multi-classe (noté MC$^2$ pour \emph{Multi-Class Classifier}) à fonction de score paramétrée linéairement choisit un vecteur de paramètres $\theta_c$. La qualité de ce choix est quantifiée par l'erreur de classification $\epsilon_c =
 \prob(g_{\theta_c}(x)\neq y)$.
 
-We do not consider a specific MC$^2$ algorithm, as long as it
-classifies inputs by maximizing the argument of a linearly
-parameterized score function. For example, one may choose a
-multi-class support vector machine~\cite{Guermeur:2007} (taking the
-kernel induced by the feature vector) or a structured large margin
-approach~\cite{Taskar:2005}. Other choices may be possible, one can
-choose its preferred algorithm.
+Notre étude est valable pour tout algorithme de classification tant qu'il opère en maximisant l'argument d'une fonction de score paramétrée linéairement. Par exemple, une machine à vecteur support multi-classe pourrait être choisie~\cite{Guermeur:2007} (en prenant le noyau induit par le vecteur de paramètres) de même qu'une approche à marge vaste et structurée~\cite{Taskar:2005}. D'autres choix sont possibles, chacun peut choisir son algorithme fétiche.
 
+\section{Classification structurée pour l'apprentissage par renforcement inverse} \label{sec:scirl}
 
-
-\section{Structured Classification for Inverse Reinforcement
-Learning} \label{sec:scirl}
-
-\subsection{General Algorithm}
+\subsection{Forme générale de l'algorithme}
 \label{subsec:scirl:algo}
 
-Consider the classification framework of
-Sec.~\ref{subsec:background:classif}. The input $x$ may be seen as a
-state et the label $y$ as an action. Then, the decision rule
-$g_w(x)$ can be interpreted as a policy which is greedy according to
-the score function $w^\top \psi(x,y)$, which may itself be seen as
-an action-value function. Making the parallel with
+On se place dans le cadre de la classification décrit en Sec.~\ref{subsec:background:classif}. L'entrée $x$ oeut être vue comme un état et le label $y$ comme une action. Il s'ensuit que l'on peut interpréter la règle de décision 
+$g_w(x)$ comme une politique gloutonne vis-à-vis de la fonction de score $w^\top \psi(x,y)$, qui peut elle même être vue comme une fonction de qualité. Making the parallel with
 Eq.~\eqref{eq:def:mu}, if $\psi(x,y)$ is the feature expectation of
 some policy $\pi$ which produces labels of the training set, et if
 the classification error is small, then $w$ will be the parameter
